[package]
name = "lib_sudoku_solver"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
getrandom = { version = "0.2", features = ["js"] }
rand = "0.8.5"
serde = "1.0.217"
serde-wasm-bindgen = "0.6.5"
wasm-bindgen = "0.2.100"

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
lto = true
opt-level = "z"  # 更小的体积
